     (default) if in DrawWorld; any transforms for these two functions *MUST*
     include a gl.LoadIdentity call when argument #3 is false (whether they
     are used in DrawWorld or in DrawScreen)
     the [new] FIFTH argument determines whether the model is drawn opaque
     ('true' [default]) or with translucency ('false'); requires false for
     argument #3

 - add callouts
     gl.{Unit,Feature}Textures(number objID, boolean enable) -> nil
     gl.{Unit,Feature}ShapeTextures(number defID, boolean enable) -> nil
   these are primarily intended to be used in conjunction with
     gl.{Unit,Feature}(objID, ..., raw=true)
     gl.{Unit,Feature}Shape(defID, ..., raw=true)
   and apply a model's default textures; easier than gl.Texture("$%...")

 - new Spring.GetUICommands function to obtain a list of all UI commands (e.g. /luaui reload)
 - new VFS.CalculateHash function that calculates hash (in base64 form) of a given string (with md5 support initially)
 - new Spring.SetFeatureFade(featureID, bool) to control whether a feature will fade or not when zoomed out.

 - add callouts (see their Unit equivalents for documentation)
     Spring.{Get,Set}FeatureRotation 
     Spring.{Get,Set}FeaturePieceCollisionVolumeData
     Spring.GetFeatureLastAttackedPiece
     Spring.GetFeaturePieceMap
     Spring.GetFeaturePieceList
     Spring.GetFeaturePieceInfo
     Spring.GetFeaturePiecePosition
     Spring.GetFeaturePieceDirection
     Spring.GetFeaturePiecePosDir
     Spring.GetFeaturePieceMatrix

     Spring.SetFeatureNoDraw
     Spring.GetFeatureNoDraw

     gl.FeatureRaw
     gl.FeatureMultMatrix
     gl.FeaturePiece
     gl.FeaturePieceMatrix
     gl.FeaturePieceMultMatrix

 - add Spring.FeatureRendering API; allows custom shaders (technically,
   materials) for features as its Spring.UnitRendering counterpart does
   for units
   note: the following two functions exist but are no-ops
     Spring.UnitRendering.SetFeatureLuaDraw
     Spring.FeatureRendering.SetUnitLuaDraw
