@@ -136,6 +136,7 @@ class LuaSyncedCtrl
 		static int SetProjectileCollision(lua_State* L);
 		static int SetProjectileTarget(lua_State* L);
 		static int SetProjectileIsIntercepted(lua_State* L);
+		static int SetProjectileIgnoreTrackingError(lua_State* L);
 
 		static int SetProjectileGravity(lua_State* L);
 		static int SetProjectileSpinAngle(lua_State* L); // DEPRECATED
