@@ -26,9 +26,12 @@ public:
 
 	int ShieldRepulse(const float3& shieldPos, float shieldForce, float shieldMaxSpeed) override;
 
+	void SetIgnoreError(bool b) { ignoreError = b; }
 private:
 	void UpdateWobble();
 	void UpdateDance();
+
+	bool ignoreError;
 
 	float maxSpeed;
 	float areaOfEffect;
